# nyx

./: .gitignore  AI-POLICY.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_FILE_PLAN.md  Cargo.toml  PRE_RELEASE_PLAN.md  README.md  ROADMAP.md  SECURITY.md  THIRDPARTY-LICENSES.html  about.toml  action.yml  book.toml  build.rs  default-nyx.conf  deny.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  docs.yml  fuzz.yml  release-build.yml  scorecard.yml  unused-deps.yml
.nyx/: triage.json
action-scripts/: download.sh  run.sh
benches/: scan_bench.rs
benches/fixtures/: sample.c  sample.cpp  sample.go  sample.java  sample.js  sample.php  sample.py  sample.rb  sample.rs  sample.ts  state_bench.c
docs/: AUDIT.md  IMPLEMENTATION_PLAN.md  Implementation_guide.md  SSA_IMPLEMENTATION_PLAN.md  SUMMARY.md  advanced-analysis.md  auth.md  cli.md  configuration.md  detectors.md  health-score-audit.md  health-score.md  how-it-works.md  implementation_plan.md  index.md  installation.md  language-maturity.md  nyx_serve_vision  output.md  phase14_pointsto_design.md  quickstart.md  rules.md  serve.md  state_implementation_plan.md
docs/detectors/: cfg.md  patterns.md  state.md  taint.md
docs/plans/: auth-rule-fp-remediation.md
docs/rules/: c.md  cpp.md  go.md  index.md  java.md  javascript.md  php.md  python.md  ruby.md  rust.md  typescript.md
examples/: ruby_inspect.rs  ruby_inspect_chain.rs
examples/cfg_analysis/: example.js  example.rs
examples/cross-file/: config.rs  exec.rs  main.rs  sanitize.rs
examples/single-func/: example.rs
examples/standard/: test.rs
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/scripts/: check-licenses.mjs
frontend/src/: App.tsx
fuzz/: Cargo.toml
fuzz/dict/: all.dict
fuzz/fuzz_targets/: cross_file_taint.rs  extract_summaries.rs  scan_bytes.rs
fuzz/seed_corpus/cross_file_taint/: xfile_c.c  xfile_cpp.cpp  xfile_go.go  xfile_java.java  xfile_javascript.js  xfile_php.php  xfile_python.py  xfile_ruby.rb  xfile_rust.rs  xfile_typescript.ts
scripts/: README.md  bughunt-overnight.sh  bughunt-watch.py  cached-cargo-test.sh  capture-screenshots.mjs  check.sh  fix.sh  frame-screenshots.py  render-cli.py  sgr-merge.py
src/: ast.rs  callgraph.rs  cfg.rs  cli.rs  convergence_telemetry.rs  database.rs  engine_notes.rs  errors.rs  evidence.rs  fmt.rs  interop.rs  lib.rs  main.rs  output.rs  rank.rs  rust_resolve.rs  summary.rs  symex.rs  taint.rs  walk.rs
src/abstract_interp/: bit_domain.rs  interval.rs  mod.rs  path_domain.rs  string_domain.rs
src/auth_analysis/: checks.rs  config.rs  mod.rs  model.rs  sql_semantics.rs
src/cfg/: blocks.rs  cfg_tests.rs  conditions.rs  decorators.rs  dto.rs  helpers.rs  hierarchy.rs  imports.rs  literals.rs  mod.rs  params.rs
src/cfg_analysis/: auth.rs  dominators.rs  error_handling.rs  guards.rs  mod.rs  resources.rs  rules.rs  scoring.rs  tests.rs  unreachable.rs
src/commands/: config.rs  index.rs  list.rs  mod.rs  scan.rs  serve.rs
src/constraint/: domain.rs  lower.rs  mod.rs  solver.rs  tests.rs
src/labels/: c.rs  cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  typescript.rs
src/patterns/: c.rs  cpp.rs  ejs.rs  go.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  typescript.rs
src/pointer/: analysis.rs  domain.rs  mod.rs
src/server/: app.rs  assets.rs  debug.rs  error.rs  health.rs  jobs.rs  mod.rs  models.rs  observability.rs  owasp.rs  progress.rs  scan_log.rs  security.rs  triage_sync.rs
src/ssa/: alias.rs  const_prop.rs  copy_prop.rs  dce.rs  display.rs  heap.rs  invariants.rs  ir.rs  lower.rs  mod.rs  param_points_to.rs  pointsto.rs  static_map.rs  type_facts.rs
src/state/: domain.rs  engine.rs  facts.rs  lattice.rs  mod.rs  symbol.rs  transfer.rs
src/summary/: mod.rs  points_to.rs  (+2 more)
tests/: abstract_transfer_tests.rs  auth_analysis_tests.rs  backwards_analysis_tests.rs  benchmark_test.rs  cli_validation_tests.rs  concurrent_scan_tests.rs  cross_file_abstract_tests.rs  cross_file_alias_tests.rs  cross_file_body_loading_tests.rs  cross_file_context_off_tests.rs  cross_file_context_tests.rs  cross_file_data_exfil_split_tests.rs  cross_file_phi_tests.rs  data_exfil_go_integration_tests.rs  data_exfil_java_integration_tests.rs  db_corruption_tests.rs  dedup_alternative_paths_tests.rs  determinism_threads_tests.rs  engine_notes_rank_tests.rs  engine_notes_tests.rs  fetch_data_exfil_integration_tests.rs  fetch_data_exfil_suppression_tests.rs  gauss_seidel_tests.rs  health_score_calibration.rs  hierarchy_pipeline_tests.rs  hostile_input_tests.rs  incremental_index_tests.rs  indexed_parity_tests.rs  inline_cache_origin_tests.rs  integration_tests.rs  js_ts_pass2_convergence_tests.rs  malformed_config_tests.rs  panic_recovery_tests.rs  parse_timeout_test.rs  pattern_tests.rs  perf_breakdown.rs  perf_tests.rs  phase12_switch_tests.rs  phase8_fragility_tests.rs  phase_c_auth_taint_tests.rs  (+12 more)
tests/benchmark/corpus/rust/xss/axum_html/: Cargo.toml  main.rs
tests/fixtures/auth_analysis_admin_multilang_integration/: AdminProjectsController.java  Cargo.toml  README.md  admin_app.rb  admin_routes.js  axum_admin.rs  expectations.json  flask_admin.py  go.mod  package.json  pom.xml
tests/fixtures/auth_analysis_ownership_multilang_integration/: Cargo.toml  ProjectsController.java  README.md  django_views.py  expectations.json  gin_projects.go  go.mod  package.json  pom.xml
tests/fixtures/auth_analysis_rust_frameworks_integration/: Cargo.toml  README.md  axum_routes.rs  expectations.json  rocket_routes.rs
tests/fixtures/phase_c_auth_taint/: Cargo.toml  handler_sanitized.rs  handler_unsanitized.rs
tests/fixtures/rust_framework_rules/: Cargo.toml  README.md  actix_handlers.rs  axum_handlers.rs  expectations.json  rocket_handlers.rs
(+2208 files in other folders)
