[package]
name = "nyx-scanner"
version = "0.2.0-alpha"
edition = "2024"
description = "A CLI security scanner for automating vulnerability checks"
license = "GPL-3.0"
authors = ["Eli Peter <ecpeter23@exmaple.com>"]
homepage = "https://github.com/ecpeter23/nyx"
repository = "https://github.com/ecpeter23/nyx"
documentation = "https://github.com/ecpeter23/nyx#readme"
keywords = ["security", "vulnerability", "scanner", "cli", "automation"]
categories = ["command-line-utilities", "development-tools" ]
readme = "README.md"
default-run = "nyx"
exclude = [
    "assets/",
    ".github/",
]

autoexamples = false

[lib]
name = "nyx_scanner"
path = "src/lib.rs"

[[bin]]
name = "nyx"
path = "src/main.rs"

[[bench]]
name = "scan_bench"
harness = false

[dev-dependencies]
tempfile = "3.21.0"
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"
predicates = "3"
glob = "0.3"

[dependencies]
directories = "6.0.0"
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "ansi","time"] }
tracing = "0.1.41"
num_cpus = "1.17.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
r2d2_sqlite = { version = "0.31.0", features = ["bundled"] }
ignore = "0.4.23"
tree-sitter = "0.25.8"
tree-sitter-rust = "0.24.0"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.23.6"
tree-sitter-ruby = "0.23.1"
crossbeam-channel = "0.5.15"
blake3 = "1.8.2"
once_cell = "1.21.3"
console = "0.16.0"
rayon = "1.11.0"
r2d2 = "0.8.10"
bytesize  = "2.0.1"
chrono    = { version = "0.4.41", default-features = false, features = ["std", "clock"] }
thiserror = "2.0.16"
dashmap = "7.0.0-rc2"
petgraph = "0.8.2"
bitflags = "2.9.4"
phf = { version = "0.13.1", features = ["macros"] }
