[package]
name = "nyx-scanner"
version = "0.4.0"
edition = "2024"
description = "A CLI security scanner for automating vulnerability checks"
license = "GPL-3.0"
authors = ["Eli Peter <elicpeter@exmaple.com>"]
homepage = "https://github.com/elicpeter/nyx"
repository = "https://github.com/elicpeter/nyx"
documentation = "https://github.com/elicpeter/nyx/tree/master/docs"
keywords = ["security", "vulnerability", "scanner", "static-analysis", "cli"]
categories = ["security", "command-line-utilities", "development-tools", "parser-implementations", "text-processing"]
readme = "README.md"
default-run = "nyx"
exclude = [
    "assets/",
    ".github/",
    "CLAUDE.md",
    ".claude/",
    ".idea/",
    "tests/",
    "benches/",
    "examples/",
]

autoexamples = false

[lib]
name = "nyx_scanner"
path = "src/lib.rs"

[[bin]]
name = "nyx"
path = "src/main.rs"

[[bench]]
name = "scan_bench"
harness = false

[dev-dependencies]
tempfile = "3.26.0"
criterion = { version = "0.8", features = ["html_reports"] }
assert_cmd = "2"
predicates = "3"
glob = "0.3"

[dependencies]
directories = "6.0.0"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.3"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "ansi","time"] }
tracing = "0.1.44"
num_cpus = "1.17.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
r2d2_sqlite = { version = "0.32.0", features = ["bundled"] }
ignore = "0.4.25"
tree-sitter = "0.26.6"
tree-sitter-rust = "0.24.0"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
crossbeam-channel = "0.5.15"
blake3 = "1.8.3"
once_cell = "1.21.3"
console = "0.16.2"
terminal_size = "0.4"
rayon = "1.11.0"
r2d2 = "0.8.10"
bytesize  = "2.3.1"
chrono    = { version = "0.4.44", default-features = false, features = ["std", "clock"] }
thiserror = "2.0.18"
dashmap = "7.0.0-rc2"
petgraph = "0.8.3"
bitflags = "2.11.0"
phf = { version = "0.13.1", features = ["macros"] }
indicatif = "0.18.4"
smallvec = "1.15"
