[package]
name = "phase-c-auth-taint"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"

# Handler sources live at the crate root rather than under src/, so
# cargo-machete's manifest scan misses the `use axum::...` lines and
# flags this as unused. Nyx scans the .rs files directly; the dep is real.
[package.metadata.cargo-machete]
ignored = ["axum"]
