[package]
name = "rust-framework-rules"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
actix-web = "4"
rocket = "0.5"

# Handler sources live at the crate root (axum_handlers.rs etc) rather
# than under src/, so cargo-machete's manifest scan misses the `use`
# lines and flags these as unused. Nyx scans the .rs files directly;
# the deps are real.
[package.metadata.cargo-machete]
ignored = ["axum", "actix-web", "rocket"]
