[package]
name = "axum_html_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Sources live at the crate root (main.rs) rather than under src/, so
# cargo-machete's manifest scan misses the `use` lines and flags these
# as unused. Nyx scans the .rs files directly; the deps are real.
[package.metadata.cargo-machete]
ignored = ["axum", "tokio"]
